RESOLVED FIXED15013
ASSERTION FAILED !m_inDestructor in WebCore::Shared<WebCore::PluginStreamWin>::ref() on Windows
https://bugs.webkit.org/show_bug.cgi?id=15013
Summary ASSERTION FAILED !m_inDestructor in WebCore::Shared<WebCore::PluginStreamWin>...
Matt Lilek
Reported 2007-08-19 13:45:32 PDT
I keep hitting this assert on Windows when dragging around the map on weather.com (see URL). It doesn't happen immediately, but if you zoom in/out and drag around for a bit you'll hit it. ASSERTION FAILED: !m_inDestructor i:\cygwin\home\matt\code\webkit\webcore\platform\shared.h(41) : WebCore::Shared<class WebCore::PluginStreamWin>::ref WebKit_debug.dll!WebCore::Shared<WebCore::PluginStreamWin>::ref() Line 41 + 0x24 bytes C++ WebKit_debug.dll!WTF::RefPtr<WebCore::PluginStreamWin>::RefPtr<WebCore::PluginStreamWin>(WebCore::PluginStreamWin * ptr=0x05320e10) Line 36 + 0x3c bytes C++ WebKit_debug.dll!WebCore::PluginStreamWin::cancelAndDestroyStream(short reason=1) Line 187 C++ WebKit_debug.dll!WebCore::PluginStreamWin::didReceiveData(WebCore::SubresourceLoader * loader=0x0531c200, const char * data=0x04148bc0, int length=8760) Line 355 C++ WebKit_debug.dll!WebCore::SubresourceLoader::didReceiveData(const char * data=0x04148bc0, int length=8760, __int64 lengthReceived=8760, bool allAtOnce=false) Line 180 + 0x29 bytes C++ WebKit_debug.dll!WebCore::ResourceLoader::didReceiveData(WebCore::ResourceHandle * __formal=0x05309438, const char * data=0x04148bc0, int length=8760, int lengthReceived=8760) Line 355 + 0x1f bytes C++ WebKit_debug.dll!WebCore::didReceiveData(_CFURLConnection * conn=0x036dc650, const __CFData * data=0x02315ed0, long originalLength=8760, const void * clientInfo=0x05309438) Line 97 + 0x33 bytes C++ I also get a number of these messages printed to the console before this assert: pluginstreamwin.cpp(282) : WebCore::PluginStreamWin::deliverData: Stream failed due to problems with network, disk I/O, lack of memory, or other problems. pluginstreamwin.cpp(363) : WebCore::PluginStreamWin::didFail: Stream failed due to problems with network, disk I/O, lack of memory, or other problems. (FWIW, none of the other machines on my network have any issues, nor do I have any disk I/O or ram issues).
Attachments
Geoffrey Garen
Comment 1 2007-08-20 15:56:03 PDT
Anders Carlsson
Comment 2 2007-08-31 11:24:06 PDT
Committed revision 25331.
Note You need to log in before you can comment on or make changes to this bug.