        Reviewed by Oliver.

<rdar://problem/5423939>
        http://bugs.webkit.org/show_bug.cgi?id=15013
        ASSERTION FAILED !m_inDestructor in WebCore::Shared<WebCore::PluginStreamWin>::ref() on Windows

        Protect the stream in case it's destroyed by the plug-in.

        * plugins/win/PluginStreamWin.cpp:
        (WebCore::PluginStreamWin::didReceiveData):



Canonical link: https://commits.webkit.org/19818@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@25331 268f45cc-cd09-0410-ab3c-d52691b4dbfc