WebCore/plugins/win/PluginStreamWin.cpp
@@ -339,6 +339,10 @@ void PluginStreamWin::didReceiveData(SubresourceLoader* loader, const char* data
     m_deliveryData->resize(oldSize + length);
     memcpy(m_deliveryData->data() + oldSize, data, length);
 
+    // If the plug-in cancels the stream in deliverData it could be deleted, 
+    // so protect it here.
+    RefPtr<PluginStreamWin> protect(this);
+
     if (m_transferMode != NP_ASFILEONLY)
         deliverData();
 
